<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout
        android:background="@android:color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".petersonAlgo.ParamsForPeterson">

        <TextView
            android:id="@+id/hardcoded_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/peterson_algorithm"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/hardcoded_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hardcoded_text_1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/enter_process_id_for_the_first_process" />

        <EditText
            android:id="@+id/id1_edit_text"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hardcoded_text_2"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/hardcoded_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id1_edit_text"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_process_id_for_the_second_process" />

        <EditText
            android:gravity="center_horizontal"
            android:id="@+id/id2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hardcoded_text_3"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/proceed" />

    </RelativeLayout>
</layout>