<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/hardcoded_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:text="@string/banker_s_algorithm"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/hardcoded_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hardcoded_text_1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/choose_number_of_processes_and_resources" />

            <LinearLayout
                android:id="@+id/linear_layout_number_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hardcoded_text_2">

                <NumberPicker
                    android:id="@+id/number_picker_process"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1" />

                <NumberPicker
                    android:id="@+id/number_picker_resource"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/hardcoded_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout_number_picker"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/enter_allocation_matrix" />

            <EditText
                android:id="@+id/allocation_matrix_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hardcoded_text_3"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:lines="3"
                android:autofillHints=""
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/hardcoded_text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/allocation_matrix_edit_text"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/enter_max_matrix" />

            <EditText
                android:id="@+id/max_matrix_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hardcoded_text_4"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:lines="3"
                android:importantForAutofill="no"
                android:inputType=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/hardcoded_text_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/max_matrix_edit_text"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/enter_available_matrix" />

            <EditText
                android:id="@+id/available_matrix_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hardcoded_text_5"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:lines="3"
                android:importantForAutofill="no"
                android:inputType=""
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/proceed_button"
                android:text="@string/proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/progress_bar"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="8dp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:visibility="invisible"
                android:layout_below="@id/available_matrix_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

    </ScrollView>

</layout>